[package]
name = "raptobo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.14", features = ["derive", "unstable-doc"] }
curl = "0.4.44"
env_logger = "0.10.1"
flate2 = "1.0.28"
log = "0.4.20"
rust-lzma = "0.6.0"
